@@ -13,8 +13,8 @@ plugins {
   id 'pmd'
   id 'jacoco'
   id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-  id 'org.springframework.boot' version '2.5.6'
-  id 'org.owasp.dependencycheck' version '6.2.2'
+  id 'org.springframework.boot' version '2.5.9'
+  id 'org.owasp.dependencycheck' version '6.5.3'
   id 'com.github.ben-manes.versions' version '0.39.0'
   id 'org.sonarqube' version '3.3'
   id "info.solidsoft.pitest" version '1.6.0'
@@ -238,6 +238,18 @@ dependencyManagement {
     dependencySet(group: 'com.google.guava', version: '30.1.1-jre') {
       entry 'guava'
     }
+    dependencySet(group: 'org.springframework.cloud', version: '3.0.5') {
+      entry 'spring-cloud-starter-openfeign'
+      entry 'spring-cloud-openfeign-core'
+    }
+    dependencySet(group: 'org.apache.tomcat.embed', version: '9.0.58') {
+      entry 'tomcat-embed-core'
+      entry 'tomcat-embed-websocket'
+    }
+    dependencySet(group: 'org.springframework.security', version: '5.6.1') {
+      entry 'spring-security-core'
+      entry 'spring-security-test'
+    }
   }
   imports {
     mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2020.0.3'
@@ -287,7 +299,7 @@ configurations.all {
   resolutionStrategy {
     eachDependency { DependencyResolveDetails details ->
       if (details.requested.group in ['org.apache.logging.log4j']) {
-        details.useVersion '2.15.0'
+        details.useVersion '2.17.1'
       }
     }
   }
@@ -314,7 +326,7 @@ dependencies {
 
   compile group: 'uk.gov.hmcts.reform', name: 'logging', version: versions.reformLogging
   compile group: 'uk.gov.hmcts.reform', name: 'logging-appinsights', version: versions.reformLogging
-  compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.2.7.RELEASE'
+  compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.2.10.RELEASE'
 
   compile group: 'uk.gov.hmcts.reform', name: 'properties-volume-spring-boot-starter', version: '0.1.0', withoutSpringCloudContext
 
@@ -323,9 +335,13 @@ dependencies {
 
   implementation group: 'org.flywaydb', name: 'flyway-core', version: '8.2.2'
   implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.18'
+  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '3.0.5'
 
-  compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.15.0'
-  compile group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: '2.15.0'
+  implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.2'
+  implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.13.2'
+
+  compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.1'
+  compile group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: '2.17.1'
 
   compile group: "com.networknt", name: "json-schema-validator", version: "1.0.49"
   implementation group: "com.gilecode.yagson", name: "j9-reflection-utils", version: "1.0"
@@ -336,6 +352,7 @@ dependencies {
 
   annotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
 
+  implementation group: 'com.vladmihalcea', name: 'hibernate-types-52', version: '2.14.0'
 
   testCompile group: 'org.pitest', name: 'pitest', version: versions.pitest
   testCompile group: 'info.solidsoft.gradle.pitest', name: 'gradle-pitest-plugin', version: versions.gradlePitest
@@ -344,12 +361,11 @@ dependencies {
   testCompile group: 'org.testcontainers', name: 'testcontainers', version: versions.testcontainers
   testCompile group: 'org.testcontainers', name: 'postgresql', version: versions.testcontainers
 
+  testImplementation 'com.github.hmcts:fortify-client:1.2.2:all'
 
-    testCompile 'com.github.hmcts:fortify-client:1.2.0:all'
-    testCompile group: 'org.testcontainers', name: 'testcontainers', version: versions.testcontainers
-    testCompile group: 'org.testcontainers', name: 'postgresql', version: versions.testcontainers
-    testCompile group: 'com.github.tomakehurst', name: 'wiremock-jre8-standalone', version: '2.21.0'
-
+  testCompile group: 'org.testcontainers', name: 'testcontainers', version: versions.testcontainers
+  testCompile group: 'org.testcontainers', name: 'postgresql', version: versions.testcontainers
+  testCompile group: 'com.github.tomakehurst', name: 'wiremock-jre8-standalone', version: '2.21.0'
 
   testImplementation group: 'net.serenity-bdd', name: 'serenity-core', version: versions.serenity
   testImplementation group: 'net.serenity-bdd', name: 'serenity-junit', version: versions.serenity
@@ -359,19 +375,18 @@ dependencies {
   integrationTestCompile group: 'org.testcontainers', name: 'testcontainers', version: versions.testcontainers
   integrationTestCompile group: 'org.testcontainers', name: 'postgresql', version: versions.testcontainers
 
-  implementation group: 'com.h2database', name: 'h2', version: '2.0.202'
+  implementation group: 'com.h2database', name: 'h2', version: '2.1.210'
 
-    testImplementation group: 'io.cucumber', name: 'cucumber-java8', version: versions.cucumber
-    testImplementation group: 'io.cucumber', name: 'cucumber-spring', version: versions.cucumber
-    testImplementation group: 'io.cucumber', name: 'cucumber-junit', version: versions.cucumber
-    testImplementation group: 'io.cucumber', name: 'cucumber-java', version: versions.cucumber
-    testImplementation group: 'io.cucumber', name: 'cucumber-spring', version: versions.cucumber
+  testImplementation group: 'io.cucumber', name: 'cucumber-java8', version: versions.cucumber
+  testImplementation group: 'io.cucumber', name: 'cucumber-spring', version: versions.cucumber
+  testImplementation group: 'io.cucumber', name: 'cucumber-junit', version: versions.cucumber
+  testImplementation group: 'io.cucumber', name: 'cucumber-java', version: versions.cucumber
+  testImplementation group: 'io.cucumber', name: 'cucumber-spring', version: versions.cucumber
 
-    integrationTestCompile group: 'org.testcontainers', name: 'testcontainers', version: versions.testcontainers
-    integrationTestCompile group: 'org.testcontainers', name: 'postgresql', version: versions.testcontainers
-    integrationTestCompileOnly group: 'org.projectlombok', name: 'lombok', version: versions.lombok
-    integrationTestAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
-
+  integrationTestCompile group: 'org.testcontainers', name: 'testcontainers', version: versions.testcontainers
+  integrationTestCompile group: 'org.testcontainers', name: 'postgresql', version: versions.testcontainers
+  integrationTestCompileOnly group: 'org.projectlombok', name: 'lombok', version: versions.lombok
+  integrationTestAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
 
   testImplementation libraries.junit5
   testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', {
@@ -413,7 +428,6 @@ dependencies {
 
   cucumberRuntime 'io.cucumber:cucumber-java:6.9.1'
   cucumberRuntime 'org.springframework:spring-web'
-  cucumberRuntime 'com.fasterxml.jackson.core:jackson-core'
   cucumberRuntime group: 'org.springframework.security', name: 'spring-security-test'
   cucumberRuntime group: 'io.rest-assured', name: 'rest-assured', version: '4.2.1'
   cucumberRuntime group: 'io.rest-assured', name: 'json-path', version: '4.2.1'
@@ -447,9 +461,9 @@ flyway {
   user = System.getenv('FLYWAY_USER')
   password = System.getenv('FLYWAY_PASSWORD')
 
-  if (project.hasProperty("flyway.password")) {
+  if (System.getenv('LAU_DB_PASSWORD')) {
     placeholders = [
-      'LAU_DB_PASSWORD': project.getProperty("flyway.password")
+      'LAU_DB_PASSWORD': System.getenv('LAU_DB_PASSWORD')
     ]
   }
 
@@ -465,12 +479,6 @@ task migratePostgresDatabase(type: FlywayMigrateTask) {
     url = "jdbc:postgresql://${dburl}"
   }
 }
-
-//task fortifyScan(type: JavaExec)  {
-//  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
-//  classpath += sourceSets.test.runtimeClasspath
-//  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
-//}
 
 mainClassName = 'uk.gov.hmcts.reform.laubackend.cases.Application'
 
